many changes! oh boy

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -8,10 +8,10 @@
     "This is the script that processes my data files. \n",
     "\n",
     "### Table of contents\n",
-    "- [1st section](#first-section) is where I open files\n",
-    "- [2nd section](#second-section) is where I fix X, Y and Z\n",
-    "- [3rd section](#third-section) is where I convert A to B\n",
-    "- [Conclusion](#conclusion) rounds up with some observations"
+    "- [1st section](#First-section) is where I open files\n",
+    "- [2nd section](#Second-section) is where I fix X, Y and Z\n",
+    "- [3rd section](#Third-section) is where I convert A to B\n",
+    "- [Conclusion](#Conclusion) rounds up with some observations"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
